<resources>
    <string name="app_name">RSSFeedAggregator</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Title</string>
    <string name="url">URL</string>
    <string name="newfeed">New Feed</string>
    <string name="OK">OK</string>

    <string name="list_feeds">List of feeds</string>
    <string name="new_feed">Add a new feed</string>
    <string name="about_app">About this app</string>
    <string name="signout_app">SignOut</string>
    <string name="loading">Waiting for sync...</string>
    <string name="description_refresh">Refresh</string>
    <string name="About_App_description">This app is all that you need to read all of the RSS feeds.
        It is getting more and more common for websites to have RSS feeds.
        They usually indicate the existence of the feed on the home page or main news page with a link to "RSS", or sometimes by
        displaying an orange button with the letters "XML" or "RSS". RSS feeds are also often found via a "Syndicate This" link.
        Text "RSS" links sometimes (there are lots of variations) point to a web page explaining the nature of the RSS feeds provided
        and how to find them. The buttons are often linked directly to the RSS feed file itself.Once you know the URL of an RSS feed,
        you can provide that address in the Add new Feed section and have the aggregator monitor the feed for you.
        </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_view_text">No data available</string>
    <string name="widget_text">Feed Updates </string>
    <string name="title_widget_today">Widget_Today</string>


    <string name="rssfeed_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="signing_in">Signing In</string>
    <string name="signed_out">Signed out</string>
    <string name="email">email</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_revoke">Revoke Access</string>
    <string name="button_signin">Sign In</string>

    <string name="title_entry">title</string>
    <string name="link_entry">link</string>
    <string name="description_entry">description</string>
    <string name="language_entry">language</string>
    <string name="rssItems">rssItems</string>

    <string name="invalid_url">Invalid Url, please re-enter</string>
    <string name="feed_add_successful">Successfully added the new Feed, Please check list of feeds</string>


</resources>
