<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_FeedList"
            android:icon="@drawable/rss_box"
            android:title="@string/list_feeds" />
        <item
            android:id="@+id/nav_AddFeed"
            android:icon="@drawable/plus_circle"
            android:title="@string/new_feed" />
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/application"
            android:title="@string/about_app" />
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/logout"
            android:title="@string/signout_app" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
