<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sunitha.rssfeedaggregator.SignInFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="2dip">
        <TextView
            android:id="@+id/sign_in_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginBottom="30dip"
            android:text="" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dip"
            android:enabled="false"
            android:contentDescription="@string/button_signin"/>

        <Button
            android:id="@+id/sign_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signout"
            android:enabled="true"
            android:contentDescription="@string/button_signout"/>

        <Button
            android:id="@+id/revoke_access_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_revoke"
            android:enabled="true"
            android:contentDescription="@string/button_revoke"/>

    </LinearLayout>


</FrameLayout>
